# maxi-backend

./: .gitignore  Cargo.toml  README.md  build.sh  pom.xml  rebuild_start.sh  service_deploy.sh
src/: lib.rs  main.rs
src/error/: mod.rs
src/handler/: login.rs  mod.rs  todo.rs
src/main/java/io/maxi/api/: MaxiSpringBootApplication.java
src/main/java/io/maxi/api/aop/: AopOrder.java  NoCheckLOgin.java  RequestCostAop.java  ValidParamsAop.java  ValidTokenAop.java  ValidUserAop.java
src/main/java/io/maxi/api/config/: AfterConstruct.java  CacheCallback.java  GlobalExceptionHandler.java  RedisCacheConfig.java  RedisSwapper.java  RestTemplateConfig.java  SwaggerConfig.java  WebConfig.java
src/main/java/io/maxi/api/controller/: AiController.java  CommonController.java  ImageController.java  LaunchController.java
src/main/java/io/maxi/api/dao/: MaxiAiUserPointMapper.java  MaxiHomeSlideshowMapper.java  MaxiNftCollectionMapper.java  MaxiNftCollectionSellAddressMapper.java  MaxiNftCollectionSellMapper.java
src/main/java/io/maxi/api/entity/: BaseEntity.java  MaxiAiUserPoint.java  MaxiHomeSlideshow.java  MaxiNftCollection.java  MaxiNftCollectionSell.java  MaxiNftCollectionSellAddress.java
src/main/java/io/maxi/api/request/: BaseRequest.java  CommonRequest.java  HomeBannerRequest.java  MintCheckRequest.java  NftDetailRequest.java  NftListRequest.java
src/main/resources/: generatorConfig.xml  log4j2.xml
src/main/resources/config/: application-dev.properties  application-prod.properties  application.properties
src/model/: login.rs  todo.rs
(+39 files in other folders)
