[package]
name = "maxi-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["headers"] }
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
